# NGMDaq

./: CMakeLists.txt  Doxyfile  DrawHits.py  FindROOT.cmake  README.md  loopTakeData.py  takeData.C  takeData.py  takeData_PMTtest.py  toRoot.C  toRoot.py  trigconf
EXOUtilities/: CMakeLists.txt  EXOBaselineRemover.cc  EXOBaselineRemover.hh  EXODecayTimeFit.cc  EXODecayTimeFit.hh  EXOErrorLogger.cc  EXOErrorLogger.hh  EXOExtremumFinder.cc  EXOExtremumFinder.hh  EXOFastFourierTransformFFTW.cc  EXOFastFourierTransformFFTW.hh  EXOMatchedFilter.cc  EXOMatchedFilter.hh  EXOMiscUtil.hh  EXOPoleZeroCorrection.cc  EXOPoleZeroCorrection.hh  EXORisetimeCalculation.cc  EXORisetimeCalculation.hh  EXOSmoother.cc  EXOSmoother.hh  EXOTemplWaveform.cc  EXOTemplWaveform.hh  EXOTrapezoidalFilter.cc  EXOTrapezoidalFilter.hh  EXOUtilities_LinkDef.h  EXOVWaveformTransformer.cc  EXOVWaveformTransformer.hh  EXOWaveformFT.cc  EXOWaveformFT.hh
NCACommon/: Array2d.cc  Array2d.h  BlockFlood.cc  BlockFlood.h  BlockMapping.cc  BlockMapping.h  CMakeLists.txt  ImageMaker.cc  LUTMaker.cc  LUTmaker.h  NCACommon_LinkDef.h
NGMAnalysis/: AnaAverageWaveform.cc  AnaAverageWaveform.h  CMakeLists.txt  NGMAnalysis_LinkDef.h  NGMBurstMonitor.cc  NGMBurstMonitor.h  NGMCanvas.cc  NGMCanvas.h  NGMDisplay.cc  NGMDisplay.h  NGMGeomVals.h  NGMMarker.cc  NGMMarker.h  NGMMultipleScattering.cc  NGMMultipleScattering.h  NGMPSDAnalyzer.cc  NGMPSDAnalyzer.h  NGMRateMonitor.cc  NGMRateMonitor.h  NGMTimeMonitor.cc  NGMTimeMonitor.h  NGMWaterfall.cc  NGMWaterfall.h  NGMZoomGui.cc  NGMZoomGui.h
NGMBlockDetector/: CMakeLists.txt  CoincidenceImager.cc  CoincidenceImager.h  CoincidenceMaker.cc  CoincidenceMaker.h  DepthScan.cc  DepthScan.h  ImageMaker.cc  ImageMaker.h  InteractiveDecoder.cc  InteractiveDecoder.h  LinearScanAnalysis.cc  LinearScanAnalysis.h  MyArray2d.cc  MyArray2d.h  NGMBlockAliveMonitor.cc  NGMBlockAliveMonitor.h  NGMBlockArrayMonitor.cc  NGMBlockArrayMonitor.h  NGMBlockDetectorCalibrator.cc  NGMBlockDetectorCalibrator.h  NGMBlockDetector_LinkDef.h  NGMBlockFNWellCounter.cc  NGMBlockFNWellCounter.h  NGMBlockFlood.h  NGMBlockMapping.cc  NGMBlockMapping.h  NGMBlockMultipleScattering.cc  NGMBlockMultipleScattering.h  NGMBlockPSDMaker.cc  NGMBlockPSDMaker.h  NGMBlockPicoDST.cc  NGMBlockPicoDST.h  NGMPixelADCMonitor.cc  NGMPixelADCMonitor.h  NGMSISCalibrator.cc  NGMSISCalibrator.h  PDSTImager.cc  PDSTImager.h
NGMData/: CMakeLists.txt  NGMBufferedPacket.cc  NGMBufferedPacket.h  NGMConfigurationParameter.cc  NGMConfigurationParameter.h  NGMConfigurationTable.cc  NGMConfigurationTable.h  NGMData_LinkDef.h  NGMHit.cc  NGMHit.h  NGMLogger.cc  NGMLogger.h  NGMSystemConfiguration.cc  NGMSystemConfiguration.h  NGMWaveform.cc  NGMWaveform.h
NGMModuleBase/: CMakeLists.txt  NGMDaqGui.cc  NGMDaqGui.h  NGMModule.cc  NGMModule.h  NGMModuleBase_LinkDef.h  NGMSpy.cc  NGMSpy.h  NGMSpyServ.cc  NGMSpyServ.h  NGMSystem.cc  NGMSystem.h
NGMModuleCore/: CMakeLists.txt  NGMBaseline.cc  NGMBaseline.h  NGMHitIO.cc  NGMHitIO.h  NGMHitPSD.cc  NGMHitPSD.h  NGMHitProcess.cc  NGMHitProcess.h  NGMModuleCore_LinkDef.h  NGMMultiFormatReader.cc  NGMMultiFormatReader.h  NGMPIXIE16RawReaderv2.cc  NGMPIXIE16RawReaderv2.h  NGMPSDMaker.cc  NGMPSDMaker.cc.FitSingleDetectors  NGMPSDMaker.h  NGMPacketBufferIO.cc  NGMPacketBufferIO.h  NGMPacketMergeSort.cc  NGMPacketMergeSort.h  NGMParticleIdent.cc  NGMParticleIdent.h  NGMReaderBase.cc  NGMReaderBase.h  NGMSIS3302RawReader.cc  NGMSIS3302RawReader.h  NGMSIS3316RawReader.cc  NGMSIS3316RawReader.h  NGMSimpleParticleIdent.cc  NGMSimpleParticleIdent.h  NGMTimeGapFinder.cc  NGMTimeGapFinder.h  NGMTimingCal.cc  NGMTimingCal.h  NGMTof.cc  NGMTof.h  PIXIE16RawReaderv3.cc  PIXIE16RawReaderv3.h  PIXIE16RawReaderv4.cc  (+1 more)
StructFileDecode/: Test of reading in binary files.html  Test of reading in binary files.ipynb  decoder_bl.py  decoder_bl_performance analysis.py  main.py  p_root_converter_driver.py  root_converter.py
Systems/SIS3302System/: CMakeLists.txt  SIS3302System.cc  SIS3302System.h  SIS3302System_LinkDef.h
Systems/SIS3316System/: CMakeLists.txt  SIS3316System.cc  SIS3316System.h  SIS3316System_LinkDef.h
Systems/SIS3316SystemMT/: CMakeLists.txt  SIS3316SystemMT.cc  SIS3316SystemMT.cc_version_with_only_one_card_setting  SIS3316SystemMT.cc~  SIS3316SystemMT.h  SIS3316SystemMT_LinkDef.h
ToDo/: NGMChain.h  NGMCluster.h  NGMLogger.h
VMECards/: CMakeLists.txt  SIS3316SimpleTest.cc  VMECards_LinkDef.h  caenHV6533card.cc  caenHV6533card.h  sis3302.h  sis3302card.cc  sis3302card.h  sis3316.h  sis3316_eth_access_test.cc  sis3316_ethernetB_access_class.cc  sis3316_ethernetB_access_class.h  sis3316_ethernet_access_class.cc  sis3316_ethernet_access_class.h  sis3316_sample_test_gui.cpp  sis3316card.cc  sis3316card.cc.bak  sis3316card.h  sis3316ethB_tests.cc  sis3350.h  sis3350_scope.cc  sis3820_clock.h  sis3820card.cc  sis3820card.h  vme_interface_class.cc  vme_interface_class.h  xiap16.h  xiap16card.cc  xiap16card.h
VMEInterfaceTSI148/: CMakeLists.txt  VMEInterfaceTSI148_LinkDef.h  tsi148_vmeinterface.cc  tsi148_vmeinterface.h  vme_api_en.h
VMEInterfaces/: CMakeLists.txt  VMEInterfaces_LinkDef.h  sis3150_vmeinterface.cc  sis3150_vmeinterface.h  sis3150usb.h  sis3150usb_utils.c  sis3150usb_utils.h  sis3150usb_vme.h  sis3150usb_vme_calls.c  sis3150usb_vme_calls.h  sis3150usb_vme_linux.c
VMEInterfaces/fx2loader/: CMakeLists.txt  SISPowerUp.command  arg_uint.c  binio.c  conv.h  core.c  eeprom.c  fx2loadadaptor.c  fx2loadadaptor.h  hexio.c  i2c.c  libbuffer.h  liberror.h  libfx2loader.h  libusbwrap.c  libusbwrap.h  main.c  misc.c  misc_fx2.c  private.h  ram.c  setup_8051.hex
config/: Run44.yml  Run45.yml  Run45_lowthresh.yml  cryotest_config.yml  example_config.yml  noise_testing_run34.yml  pulse_calibration_run35.yml  run33_config.yml  run34_coinc_config.yml  run34_config.yml  sipm_test1.yml  updated_sipm_run35.yml
macros/: AddConfig.C  CalCG.C  CalculateGainParameters.C  CountDist.C  ExampleJob.C  Master_Spreadsheet_jan_19.csv  NGMConfig2007Dec20.root  (+55 more)
python_package/: setup.cfg
python_package/src/: p_driver.py
(+53 files in other folders)
