[metadata]
name = ngmdaq
version = 0.0.1
author = nEXO Group
author_email = kwells@icloud.com
description = Controls struck digitizer systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ejangelico/NGMDaq
;project_urls =
;    Bug Tracker = https://github.com/pypa/sampleproject/issues
;classifiers =
;    Programming Language :: Python :: 3
;    License :: OSI Approved :: MIT License
;    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src